[gd_scene load_steps=9 format=3 uid="uid://dj5w5iqx004t4"]

[ext_resource type="LabelSettings" uid="uid://34c71nyrmk01" path="res://text/labelsettings/item_name.tres" id="1_7cevn"]
[ext_resource type="Script" uid="uid://ja4i2h2jcl3k" path="res://scripts/battle/item_entry.gd" id="1_7r2q4"]
[ext_resource type="LabelSettings" uid="uid://p7ibni12w0jy" path="res://text/labelsettings/item_desc.tres" id="2_7r2q4"]
[ext_resource type="Texture2D" uid="uid://dhmqbwahk027p" path="res://images/icons/middle.png" id="4_6brbo"]
[ext_resource type="Texture2D" uid="uid://bte8d08tb1j05" path="res://images/icons/all.png" id="5_2hvcx"]
[ext_resource type="Texture2D" uid="uid://3jo6gkrdcpjj" path="res://images/icons/self.png" id="6_ikiu5"]
[ext_resource type="Texture2D" uid="uid://dm6uygsqqi566" path="res://images/icons/max_hp.png" id="7_qogv1"]
[ext_resource type="Texture2D" uid="uid://d3qpvfvers1k3" path="res://images/icons/speed.svg" id="8_bmqyk"]

[node name="ItemEntry" type="ColorRect"]
custom_minimum_size = Vector2(0, 120)
offset_bottom = 140.0
size_flags_vertical = 0
mouse_filter = 2
color = Color(1, 0.760784, 0.419608, 1)
script = ExtResource("1_7r2q4")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 433.0
offset_bottom = 112.0
label_settings = ExtResource("1_7cevn")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Desc" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 53.0
offset_right = 433.0
offset_bottom = 131.0
label_settings = ExtResource("2_7r2q4")
autowrap_mode = 3

[node name="Single" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("4_6brbo")
expand_mode = 1

[node name="All" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("5_2hvcx")
expand_mode = 1

[node name="Self" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("6_ikiu5")
expand_mode = 1

[node name="ExtraHP" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 385.0
offset_right = 427.0
offset_bottom = 42.0
mouse_filter = 2
texture = ExtResource("7_qogv1")
expand_mode = 1

[node name="Label" type="Label" parent="ExtraHP"]
layout_mode = 0
offset_top = 4.0
offset_right = 74.0
offset_bottom = 67.0
scale = Vector2(0.6, 0.6)
text = "0"
label_settings = ExtResource("1_7cevn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExtraSpeed" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 442.0
offset_right = 484.0
offset_bottom = 42.0
mouse_filter = 2
texture = ExtResource("8_bmqyk")
expand_mode = 1

[node name="Label" type="Label" parent="ExtraSpeed"]
layout_mode = 0
offset_top = 4.0
offset_right = 74.0
offset_bottom = 67.0
scale = Vector2(0.6, 0.6)
text = "0"
label_settings = ExtResource("1_7cevn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeywordRow" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -113.0
offset_top = -152.0
offset_right = 688.0
offset_bottom = -19.0
mouse_filter = 2
alignment = 1
